Fixed: body layout shift

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,8 @@
 body {
-   width: 100vw;
   overflow-x: hidden;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 /* Keyframes Starts*/
